--- a/covid/static/css/style.css
+++ b/covid/static/css/style.css
@@ -9,6 +9,7 @@
 .navbar {
     transition: all 0.4s;
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+    background: #fff;
 }
 
 .navbar .nav-link {
@@ -214,7 +215,6 @@
 }
 
 
-
 /* Bootstrap Modal in Orginization's profile */
 .neft-details.svelte-qd117s {
     margin: 15px 0 0 -15px;
@@ -249,3 +249,41 @@
     text-align: left;
 }
 
+
+/*Work/Post details page*/
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+  }
+
+.mybtns {
+  display: flex;
+  justify-content: center;
+}
+
+
+/* EFFECT 5 ========================================== */
+.effect-5::before{
+  position: absolute;
+  content: "";
+  z-index: -1;
+  bottom: 20px;
+  left: 8px;
+  right: 8px;
+  top: 20px;
+  background: #aaa;
+  box-shadow: 0 0 25px 10px #aaa;
+  border-radius: 10px/40px;
+}
+.effect-5::after{
+  position: absolute;
+  content: "";
+  z-index: -1;
+  bottom: 14px;
+  left: 30px;
+  right: 30px;
+  top: 14px;
+  background: #aaa;
+  box-shadow: 0 0 25px 17px #aaa;
+  border-radius: 100px/10px;
+}
