--- a/covid/templates/base.html
+++ b/covid/templates/base.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header">
     <nav class="navbar navbar-expand-lg fixed-top py-3">
-      <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold">Covid Help Finder</a>
+      <div class="container"><a href="/" class="navbar-brand text-uppercase font-weight-bold">Covid Help Finder</a>
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
@@ -55,13 +55,14 @@
         <!--First column-->
         <div class="col-md-3">
           <h5 class="text-uppercase font-weight-bold mb-4">Corona Help Finder</h5>
-          <p>The site is made to help people in various states of India to find help, Labs and hospitals that test for Corona or covid19 virus, tips to be safe, trustful information and to check the fake news that's in circulation about the virus.</p>
+          <p>The platfom is made to help people in various states of India to find help, Labs and hospitals that test for Corona or covid19 virus, check the fake news that's in circulation about the virus, donate in a decentralized way and find tips on being safe.</p>
         </div>
         <!--/.First column-->
 
         <hr class="w-100 clearfix d-md-none">
 
-        <!--Second column-->
+
+        <!--Third column-->
         <div class="col-md-2 mx-auto">
           <h5 class="text-uppercase font-weight-bold mb-4">Links</h5>
           <ul class="list-unstyled">
@@ -71,25 +72,6 @@
             <li><a href="/covid/myprofile">Donate to Orgs</a></li>
           </ul>
         </div>
-        <!--/.Second column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Third column-->
-        <div class="col-md-2 mx-auto">
-          <h5 class="text-uppercase font-weight-bold mb-4">Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#!">Link 1</a></li>
-            <li><a href="#!">Link 2</a></li>
-            <li><a href="#!">Link 3</a></li>
-            <li><a href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <!--/.Third column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-
 
       </div>
     </div>
@@ -116,18 +98,6 @@
     <!--/.Call to action-->
 
     <hr>
-
-    <!--Social buttons-->
-    <div class="social-section text-center">
-      <ul class="list-unstyled list-inline">
-        <li class="list-inline-item"><a class="btn-floating btn-fb"><i class="fab fa-facebook-f"> </i></a></li>
-        <li class="list-inline-item"><a class="btn-floating btn-tw"><i class="fab fa-twitter"> </i></a></li>
-        <li class="list-inline-item"><a class="btn-floating btn-gplus"><i class="fab fa-google-plus-g"> </i></a></li>
-        <li class="list-inline-item"><a class="btn-floating btn-li"><i class="fab fa-linkedin-in"> </i></a></li>
-        <li class="list-inline-item"><a class="btn-floating btn-git"><i class="fab fa-github"> </i></a></li>
-      </ul>
-    </div>
-    <!--/.Social buttons-->
 
     <!--Copyright-->
     <div class="footer-copyright py-3 text-center">
