--- a/covid/templates/covid/home.html
+++ b/covid/templates/covid/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="s130" style="margin-top: 0px; padding-top: 0px;">
 
-<h5 style="margin-top: 100px; text-align: center; width:50%; color: white; text-shadow: 0px 10px 50px rgba(0, 0, 0, 0.9);"><strong>The site is made to help people in various states of India to find help, Labs and hospitals that test for Corona or covid19 virus, tips to be safe, trustful information and to check the fake news that's circulation about the virus.</strong></h5>
+<h5 style="margin-top: 100px; text-align: center; width:50%; color: white; text-shadow: 0px 10px 50px rgba(0, 0, 0, 0.9);"><strong>The platfom is made to help people in various states of India to find help, Labs and hospitals that test for Corona or covid19 virus, check the fake news that's in circulation about the virus, donate in a decentralized way and find tips on being safe. </strong></h5>
 
 
       <form action="{% url 'chose_state' %}" method="post">
@@ -54,6 +54,46 @@
         </div>
         <span class="info">Select state to see hospitals, clinics and labs that do tests for Corona Virus.</span>
       </form>
+<section class="header text-center">
+    <div class="container py-4">
+        <header>
+            <h1 class="display-4" style="color:#fff; background-color: blue;">Some amazing features</h1>
+            <hr>
+        </header>
     </div>
+</section>
+      <div class="container">
+      <div class="row">
+         <div class="col-lg-4">
+                <!-- Effect 5-->
+                <div class="card effect-5">
+                    <div class="card-body p-5">
+                        <h2 class="h5">Test Centres Nearby</h2>
+                        <p class="font-italic text-muted">With the help of this feature you can search for test centers, labs and hospitals that test for Corona or covid19 virus in your state, simply select your state and click search button.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <!-- Effect 5-->
+                <div class="card effect-5">
+                    <div class="card-body p-5">
+                        <h2 class="h5">FakeCheck</h2>
+                        <p class="font-italic text-muted">In this pandemic fake whatsapp forwards are doing the rounds, because of there already had been casualties across the country, fakecheck tells you if a Whatsapp forward message is fake with the help of Machine Learning.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <!-- Effect 5-->
+                <div class="card effect-5">
+                    <div class="card-body p-5">
+                        <h2 class="h5">Decentralized Donations</h2>
+                        <p class="font-italic text-muted">You can be a covid warrior too by donating to various organizations who are helping people around the country. The best part is it's completely open and decentralized so you can know how they are using your money to help others..</strong></p>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
 {% endblock %}
 
