--- a/covid/templates/covid/mypost_detail.html
+++ b/covid/templates/covid/mypost_detail.html
@@ -1,10 +1,79 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="p-5">
-<h1 class="myhead2">{{mypost.title}}</h1>
-<p><strong>Posted On:</strong> {{mypost.cr_date | date:"d/m/y"}}</p>
-<hr>
-<p class="text-justify">{{mypost.body}}</p>
-<img class="img-fluid" src="/media/{{mypost.main_pic}}" />
+
+<!-- Demo header-->
+<br>
+<section class="header text-center" style="padding-top: 8px;">
+    <div class="container py-4">
+        <header>
+            <h1 class="display-4">{{mypost.title}}</h1>
+            <hr>
+        </header>
+    </div>
+</section>
+
+<div class="mybtns">
+<button type="button" class="btn btn-primary mr-2 my-2" disabled>Total Amount Spend: ₹ {{mypost.amount_spend}}</button>
+<button type="button" class="btn btn-primary my-2" disabled>Total Donars involved: {{mypost.total_donars}}</button>
 </div>
+
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+    <li data-target="#demo" data-slide-to="3"></li>
+    <li data-target="#demo" data-slide-to="4"></li>
+  </ul>
+  
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/media/{{mypost.pic_one}}" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="/media/{{mypost.pic_two}}" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="/media/{{mypost.pic_three}}" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="/media/{{mypost.pic_four}}" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="/media/{{mypost.pic_five}}" width="1100" height="500">
+    </div>
+  </div>
+  
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+
+<section class="header text-center">
+    <div class="container py-4">
+        <header>
+        	<h1 class="display-4" style="text-align: left;">About this good work:</h1>
+            <p class="font-italic text-muted mb-1">{{mypost.body}}.</p>
+            <hr>
+        </header>
+    </div>
+</section>
+
+<section class="header" style="display: flex;flex-wrap: wrap; justify-content: center;">
+    <div class="container py-4">
+        <header>
+        	<h1 class="display-4" style="text-align: left;">We heartly thanks all the donars who donated</h1>
+            <p class="font-italic text-muted mb-1">{{mypost.donar_names}}.</p>
+            <hr>
+        </header>
+    </div>
+</section>
+
 {% endblock %}
