Added URLField instead of ImageField to save bandwith

--- a/covid/templates/covid/mypost_detail.html
+++ b/covid/templates/covid/mypost_detail.html
@@ -31,19 +31,19 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/media/{{mypost.pic_one}}" width="1100" height="500">
+      <img src="{{mypost.pic_one}}" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="/media/{{mypost.pic_two}}" width="1100" height="500">
+      <img src="{{mypost.pic_two}}" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="/media/{{mypost.pic_three}}" width="1100" height="500">
+      <img src="{{mypost.pic_three}}" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="/media/{{mypost.pic_four}}" width="1100" height="500">
+      <img src="{{mypost.pic_four}}" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="/media/{{mypost.pic_five}}" width="1100" height="500">
+      <img src="{{mypost.pic_five}}" width="1100" height="500">
     </div>
   </div>
   
