--- a/covid/templates/covid/mypost_list.html
+++ b/covid/templates/covid/mypost_list.html
@@ -45,7 +45,7 @@
       <!-- DEMO 4 Item-->
       {% for n1 in mypost_list %}
       <div class="col-lg-6 mb-3 mb-lg-0">
-        <div class="hover hover-4 text-white rounded"><img src="/media/{{n1.main_pic}}" alt="">
+        <div class="hover hover-4 text-white rounded"><img src="{{n1.main_pic}}" alt="">
           <div class="hover-overlay"></div>
           <div class="hover-4-content">
             <h3 class="hover-4-title text-uppercase font-weight-bold mb-0"><span class="font-weight-light">{{n1.title}} </span></h3>
