--- a/covid/templates/covid/myprofile_list.html
+++ b/covid/templates/covid/myprofile_list.html
@@ -43,7 +43,7 @@
             
             <!-- Grid item -->
             <div class="col-lg-4 col-md-6 grid-item mb-4">
-                <img class="img-fluid w-100 mb-3 img-thumbnail shadow-sm rounded-0" src="/media/{{n1.pic}}" alt="">
+                <img class="img-fluid w-100 mb-3 img-thumbnail shadow-sm rounded-0" src="{{n1.pic}}" alt="">
                 <h2 class="h4">{{n1.name}}</h2>
                 <p class="small text-muted font-italic">{{n1.description}}</p>
                 <a class="btn btn-dark btn-sm" href='/covid/myprofile/{{n1.id}}'>View organization</a>
