added mails to org model

--- a/covid/templates/covid/mypost_list.html
+++ b/covid/templates/covid/mypost_list.html
@@ -38,6 +38,7 @@
   <!-- DEMO 4 -->
   <div class="py-5">
     <h3 class="font-weight-bold mb-0">Edit | Delete</h3>
+    <a href="/covid/mypost/create" class="btn btn-primary">Add Work</a>
     <p class="font-italic text-muted mb-4">You can edit or delete your published work, keep in mind deleting published work could have a negative affect on your campaign.</p>
     <div class="row">
 
