--- a/covid/templates/covid/myprofile_detail.html
+++ b/covid/templates/covid/myprofile_detail.html
@@ -14,7 +14,7 @@
           <p class="small mb-4">{{myprofile.description}}</p>
           <p class="small mb-4"> <i class="fa fa-map-marker mr-2"></i>{{myprofile.address}}</p>
           <p class="small mb-4"> <i class="fa fa-phone mr-2"></i>{{myprofile.phone_no}}</p>
-          <p class="small mb-4"> <i class="fa fa-at mr-2"></i>{{myprofile.user.email}}</p>
+          <p class="small mb-4"> <i class="fa fa-at mr-2"></i>{{myprofile.mail}}</p>
         </div>
 
       </div>
