--- a/covid/templates/covid/fakecheck_list.html
+++ b/covid/templates/covid/fakecheck_list.html
@@ -24,7 +24,7 @@
               </svg>
             </div>
             
-            <textarea id="search" name="sf" placeholder="Paste Whatsapp message forward" value="{{ request.GET.sf }}"></textarea>
+            <textarea id="search" name="sf" placeholder="Paste Whatsapp message forward" value="{{ request.GET.sf }}" style="width: 100%; border-radius: 5px;"></textarea>
           </div>
           <div class="input-field second-wrap">
             <button class="btn-search" type="submit" value="Search">SEARCH</button>
